# vibe-coding-homeworks-dk-1

./: .env.example  AGENTS.md  CLAUDE.md  README.md  app.py  main.py  pyproject.toml  setup_iris.py
.claude/: settings.local.json
templates/: index.html
